--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -87,9 +87,9 @@
    <widget class="QWidget" name="verticalLayoutWidget_4">
     <property name="geometry">
      <rect>
-      <x>533</x>
+      <x>573</x>
       <y>470</y>
-      <width>201</width>
+      <width>161</width>
       <height>171</height>
      </rect>
     </property>
@@ -125,20 +125,6 @@
        </item>
       </layout>
      </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>我方颜色</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="setOurColorComboBox"/>
-       </item>
-      </layout>
-     </item>
     </layout>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget_5">
@@ -166,38 +152,38 @@
    <widget class="QWidget" name="verticalLayoutWidget_5">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>470</y>
-      <width>193</width>
-      <height>159</height>
+      <x>32</x>
+      <y>458</y>
+      <width>201</width>
+      <height>171</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_5">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_7">
        <item>
-        <widget class="QLabel" name="enemyStrategySelectLable">
+        <widget class="QLabel" name="redStrategySelectLable">
          <property name="text">
-          <string>敌方策略</string>
+          <string>红方策略</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="enemyStrategySelectCombBox"/>
+        <widget class="QComboBox" name="redStrategySelectCombBox"/>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
-        <widget class="QLabel" name="ourStrategySelectLable">
+        <widget class="QLabel" name="blueStrategySelectLable">
          <property name="text">
-          <string>我方策略</string>
+          <string>蓝方策略</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="ourStrategySelectCombBox"/>
+        <widget class="QComboBox" name="blueStrategySelectCombBox"/>
        </item>
       </layout>
      </item>
@@ -262,8 +248,8 @@
    <slot>handleGameModeChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>677</x>
-     <y>516</y>
+     <x>732</x>
+     <y>550</y>
     </hint>
     <hint type="destinationlabel">
      <x>647</x>
@@ -272,10 +258,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>enemyStrategySelectCombBox</sender>
+   <sender>redStrategySelectCombBox</sender>
    <signal>currentIndexChanged(int)</signal>
    <receiver>MainWindow</receiver>
-   <slot>enemyStrategyChanged(int)</slot>
+   <slot>redStrategyChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>192</x>
@@ -288,10 +274,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>ourStrategySelectCombBox</sender>
+   <sender>blueStrategySelectCombBox</sender>
    <signal>currentIndexChanged(int)</signal>
    <receiver>MainWindow</receiver>
-   <slot>ourStrategyChanged(int)</slot>
+   <slot>blueStrategyChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>167</x>
@@ -303,11 +289,28 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>setDiceComboBox</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onSetDiceComboBoxIndexChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>213</x>
+     <y>593</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>287</x>
+     <y>592</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>letAIDo()</slot>
   <slot>handleGameModeChanged(int)</slot>
-  <slot>enemyStrategyChanged(int)</slot>
-  <slot>ourStrategyChanged(int)</slot>
+  <slot>redStrategyChanged(int)</slot>
+  <slot>blueStrategyChanged(int)</slot>
+  <slot>onSetDiceComboBoxIndexChanged(int)</slot>
  </slots>
 </ui>
