--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>921</width>
-    <height>708</height>
+    <width>955</width>
+    <height>779</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,10 +28,10 @@
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>0</y>
+      <x>560</x>
+      <y>80</y>
       <width>321</width>
-      <height>451</height>
+      <height>401</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -47,8 +47,8 @@
    <widget class="QWidget" name="verticalLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>763</x>
-      <y>470</y>
+      <x>753</x>
+      <y>500</y>
       <width>131</width>
       <height>171</height>
      </rect>
@@ -87,8 +87,8 @@
    <widget class="QWidget" name="verticalLayoutWidget_4">
     <property name="geometry">
      <rect>
-      <x>573</x>
-      <y>470</y>
+      <x>563</x>
+      <y>500</y>
       <width>164</width>
       <height>171</height>
      </rect>
@@ -131,7 +131,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>470</y>
+      <y>460</y>
       <width>191</width>
       <height>61</height>
      </rect>
@@ -210,13 +210,78 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPlainTextEdit" name="red_team_name_text">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>40</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>player1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="vs_lable">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>50</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>vs</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="blue_team_name_text">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>40</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>player2</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="vs_lable_2">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>20</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>红方</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="vs_lable_3">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>20</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>蓝方</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>921</width>
+     <width>955</width>
      <height>24</height>
     </rect>
    </property>
